# sehx-rs

./: .goreleaser.yaml  Cargo.toml  README.md
packaging/aur/: config.env
packaging/aur/sehx/: .SRCINFO  PKGBUILD
packaging/aur/sehx-bin/: .SRCINFO  PKGBUILD
packaging/aur/sehx-git/: .SRCINFO  PKGBUILD
src/: lib.rs  main.rs  moto.sex
test/: moto.hex  moto.sex  parse.py
