[package]
name = "sehx"
version = "0.1.2"
edition = "2021"
description = "SEnsible HeXadecimal, the ASCII-synergetic little-endian hexadecimal format."
license = "LGPL-3.0-or-later"
repository = "https://github.com/Fierthraix/sehx-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
